hello-app-deprecate/helloweb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "hw1.helloweb.xxx"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloweb
            port:
              number: 80
  - host: "hw2.helloweb.xxx"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloweb
            port:
              number: 80
